syntax = "proto3";

package concert;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

message Concert {
  uint64 id = 1;
  string name = 2;
  google.protobuf.Timestamp date = 3;
}

service ConcertService {
  rpc ListConcerts(ListConcertsRequest) returns (ListConcertsResponse);

  rpc GetConcert(GetConcertRequest) returns (Concert);

  rpc CreateConcert(CreateConcertRequest) returns (Concert);

  rpc UpdateConcert(UpdateConcertRequest) returns (Concert);

  rpc DeleteConcert(DeleteConcertRequest) returns (google.protobuf.Empty);
}

// message Concert {
// ! This should be defined elsewere
// }

message ListConcertsRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListConcertsResponse {
  // The field name should match the noun "concert" in the method name.
  // There will be a maximum number of items returned based on the page_size
  // field in the request.
  repeated Concert concerts = 1;

  // Token to retrieve the next page of results, or empty if there are no more
  // results in the list.
  string next_page_token = 2;
}

message GetConcertRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateConcertRequest {
  // The parent resource name where the concert is to be created.
  string parent = 1;

  // The concert id to use for this concert.
  string concert_id = 2;

  // The concert resource to create.
  // The field name should match the Noun in the method name.
  Concert concert = 3;
}

message UpdateConcertRequest {
  // The concert resource which replaces the resource on the server.
  Concert concert = 1;

  google.protobuf.FieldMask update_mask = 2;
}

message DeleteConcertRequest {
  // The resource name of the concert to be deleted.
  string name = 1;
}
