syntax = "proto3";

package participation;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

message Participation {
  // кто
  uint64 tg_id = 1;
  // в какой песне
  uint64 song_id = 2;
  // на какой роли
  string role_title = 3;
}

service ParticipationService {
  rpc ListParticipations(ListParticipationsRequest)
      returns (ListParticipationsResponse);

  rpc GetParticipation(GetParticipationRequest) returns (Participation);

  rpc CreateParticipation(CreateParticipationRequest) returns (Participation);

  rpc UpdateParticipation(UpdateParticipationRequest) returns (Participation);

  rpc DeleteParticipation(DeleteParticipationRequest)
      returns (google.protobuf.Empty);
}

message ListParticipationsRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListParticipationsResponse {
  // The field name should match the noun "participation" in the method name.
  // There will be a maximum number of items returned based on the page_size
  // field in the request.
  repeated Participation participations = 1;

  // Token to retrieve the next page of results, or empty if there are no more
  // results in the list.
  string next_page_token = 2;
}

message GetParticipationRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateParticipationRequest {
  // The parent resource name where the participation is to be created.
  string parent = 1;

  // The participation id to use for this participation.
  string participation_id = 2;

  // The participation resource to create.
  // The field name should match the Noun in the method name.
  Participation participation = 3;
}

message UpdateParticipationRequest {
  // The participation resource which replaces the resource on the server.
  Participation participation = 1;

  google.protobuf.FieldMask update_mask = 2;
}

message DeleteParticipationRequest {
  // The resource name of the participation to be deleted.
  string name = 1;
}
